# wizardwars

./: .gitignore  Cargo.toml  text.txt
android/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
android/cpp/: native-lib.cpp
android/gradle/wrapper/: gradle-wrapper.properties
android/java/: MainActivity.kt
android/values/: strings.xml
assets/: ak47.glb
docs/: wizardwars.drawio
src/: ak47.rs  args.rs  buffer.rs  byte_eater.rs  camera.rs  controller.rs  dark_dungeon.rs  draw_instructions.rs  engine.rs  game.rs  game_tests.rs  generated_pvp_map.rs  gltf.rs  instance.rs  inventory.rs  katana.rs  lib.rs  main.rs  material_uniform.rs  matrix.rs  mesh.rs  mobs.rs  model.rs  npc.rs  old_renderer.rs  player.rs  pulse_rifle.rs  pvp.rs  renderer.rs  serializer.rs  shader.wgsl  structure.rs  survival.rs  types.rs  utility.rs  wgpu_buffers.rs  wgpu_types.rs
