[package]
name = "wizardwars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple_logger = "4"
clap = { version = "4", features = ["derive"] }
pge = { git = "https://github.com/Puppy-Corp/pge.git", rev = "e21079434ecd230e50c2cae4072e8b061db82d6d" }
rand = "0.8"