[package]
name = "wizardwars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
clap = { version = "4", features = ["derive"] }
pge = { git = "https://github.com/Puppy-Corp/pge.git", rev = "5519e3ab0c03d490309c4ab863c86ebe30af1d33", features = ["wgpu_winit"] }
rand = "0.8"